[gd_scene load_steps=4 format=2]

[ext_resource path="res://lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://fonts/HackFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/HackFont20.tres" type="DynamicFont" id=3]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 168.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 168.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
text = "Players"

[node name="PlayersVBox" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 168.0
margin_bottom = 52.0

[node name="TemplateLabel" type="Label" parent="HBoxContainer/VBoxContainer/PlayersVBox"]
visible = false
margin_right = 168.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )

[node name="ServerInformation" type="Label" parent="."]
margin_left = 800.0
margin_right = 800.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_right = 154.0
margin_bottom = 58.0
window_title = "Connection Error"
